# bb-ads-database

./: .env.example  .gitignore  Dockerfile  README.md  agency_analytics_implementation_plan.md  docker-compose.override.yml  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/routers/: admin.py  anomalies.py  auth.py  brands.py  campaigns.py  (+6 more)
app/core/: cache.py  config.py  database.py  error_handlers.py  exceptions.py  logging.py  permissions.py  redis.py  security.py
app/middleware/: auth.py  brand_scope.py  correlation.py
app/repositories/: base.py  brands.py  campaigns.py  performance.py  rollups.py  users.py
app/services/: brand_storage.py  clickup.py  rollup.py
app/services/ingestion/: base.py  csv_upload.py  google_ads.py  meta_ads.py
app/worker/: scheduler.py  tasks.py
docs/: migration_sop.md
mongo/init/: 01_create_indexes.js
mongo/migrations/: README.md  v001_add_brand_onboarding_status.py
nginx/: nginx.conf
nginx/conf.d/: api.conf
scripts/: audit_existing_clients.py  migrate_existing_files.py  reset_db.py  seed_data.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth_flow.py  test_brand_isolation.py  test_ingestion.py  test_performance.py
tests/mocks/: google_ads.py  meta_ads.py
tests/unit/: test_brand_scoped_repository.py  test_cache.py  test_csv_upload.py  test_google_ads_connector.py  test_health_endpoint.py  test_ingestion_base.py  test_meta_ads_connector.py  test_performance_endpoints.py  test_rollup_service.py  test_scheduler.py
(+5 files in other folders)
