[project]
name = "bb-ads-database"
version = "0.1.0"
description = "Agency Analytics Platform — multi-tenant ad performance system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.5.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "passlib[bcrypt]>=1.7.4",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0.0",
    "anthropic>=0.34.0",
    "google-ads>=24.0.0",
    "facebook-business>=20.0.0",
    "sendgrid>=6.11.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mongomock-motor>=0.0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # function calls in default args (FastAPI Depends)

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
